evaluation-run/574/k8s/validate/resources/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: wger
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: wger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: nginx
              topologyKey: kubernetes.io/hostname
      containers:
        - name: web
          image: docker.io/wger/server:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: static
              mountPath: /home/wger/static
            - name: media
              mountPath: /home/wger/media
          livenessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:8000
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
      securityContext:
        fsGroup: 1000
      volumes:
        - name: static
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
