evaluation-run/574/k8s/validate/resources/statefulset-celery-beat.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: celery-beat
  namespace: wger
  labels:
    app.kubernetes.io/name: celery-beat
    app.kubernetes.io/part-of: wger
spec:
  serviceName: celery-beat
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: celery-beat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: docker.io/wger/server:latest
          command:
            - /start-beat
          volumeMounts:
            - name: celery-beat
              mountPath: /home/wger/beat
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: celery-beat
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
